--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <div class="container">
      <div class="about">
        <div class="about-author">
-         <img src="C:\Users\tomer\OneDrive\Skrivebord\blog\Bro.png">
+         <img src="Bro.png">
        </div>
        <h1 class="about-title">About Me</h1>
        <div class="about-content">
